fixtures/error/renewGuestToken_noExpiration.js
module.exports = {
    statusCode: 400,
    detail: 'Guest token does not contain expiration time'
  };
  